FlightPath 6.x Changelog
========================

2022-08-10
  Added breadcrumbs to certain admin functions.
  

2022-08-04
  Added new function to db.inc, making it easier to get school_id from a user_id.
  
  Added new setting to School Settings, for specifying departments.
  
  Made changes in School settings to accomodate new 'Appointment settings' form.  
  
  Altered User module to make use of the new "departments" setting as a select list rather than a free-type field.
  
  Built new 'Appointment settings' form, so admins may edit global settings having to do with who may accept appointments.
  

2022-08-02
  Moved around code so that the user module is responsible for displaying text message recipient options (instead of the code being
  in hook_form_alter from engagements).
  
  Fixed bug where deleteing last txt message option wasn't allowed when editing user.
  

2022-07-31
  Added new school setting that allows What If to show all degrees (not just undergrad or grad based on student's rank).
  
  Made it so on the permissions form, underscores are not shown when stating the module name.  Makes it look nicer.
  

2022-07-29
  Made an adjustment to system.module's function system_reload_and_cache_course_inventory(), such that we only get the 10 most recent catalog years
  when building the course inventory file.  We also limit it to 50,000 records, though this might be changed in the future.  By making this
  change, it keeps the files/cache_data/courses_serialized.info file relatively small and keeps it from growing out of control as more courses
  are added and duplicated each year.  This in turn uses up less RAM on the server.  
  
  Added extra css class to edit link for user attributes, making it easier to style later on.
  

2022-07-28
  On the Status page, the last cron run wasn't being displayed in the user's timezone.
  

2022-07-27
  Added small change to batch.js, to make it run slightly faster.
  